add event listeners to buttons, add media queries, add instructuions to use keys

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1">
     <title>Oblique Strategies</title>
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
@@ -10,9 +10,10 @@
         <h1 id='strategy'></h1>
     </div>
     <div class="arrows">
-      <div class="previous">⟵ previous</div>
-      <div class="next">next ⟶</div>
+      <div id="previous">⟵ previous</div>
+      <div id="next">next ⟶</div>
     </div>
+    <div class="instructions">or press ⇧ key up for new prompts and ⇩ key down for the previous prompt</div>
     <script type="module" src="script.js"></script>
     <script src="script.js"></script>
   </body>
